# fastapi-boilerplate

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
scripts/: generate_reqtxt.sh
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/user_router/: __init__.py  get_user_by_id.py
src/celery_tasks/: example_task.py
src/crud/users/: __init__.py  get_user_by_id.py
src/libs/celery_client/: celery_config.py  celery_utils.py
src/libs/db/: __init__.py
src/middlewares/: __init__.py  authenticate.py
src/models/: user_model.py
src/schemas/: user_schema.py
src/services/: user_service.py
src/utils/: __init__.py
